nginx/lb.yaml
kind: Service
apiVersion: v1
metadata:
  name: test-service
spec:
  type: LoadBalancer
  selector:
    app: nginx-deployment2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
    name: web
