nginx/svc2.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc2
  namespace: russ-playground
spec:
  type: ClusterIP
  selector:
    app: nginx2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
