nginx/deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment1
spec:
  selector:
    matchLabels:
      app: nginx1
  replicas: 3 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx1
    spec:
      containers:
      - name: nginx1
        image: nginx:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
        - containerPort: 443 
        volumeMounts:
            - name: nginx-config
              mountPath: /usr/share/nginx/html #nginx specific
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config1
---
apiVersion: v1
kind: Service
metadata:
  name: svc1
spec:
  type: ClusterIP
  selector:
    app: nginx1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment2
spec:
  selector:
    matchLabels:
      app: nginx2
  replicas: 3 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: nginx2
    spec:
      containers:
      - name: nginx2
        image: nginx:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "64Mi"
            cpu: "250m"
        ports:
        - containerPort: 80
        - containerPort: 443  
        volumeMounts:
            - name: nginx-config
              mountPath: /usr/share/nginx/html #nginx specific
      volumes:
        - name: nginx-config
          configMap:
            name: nginx-config2
---
apiVersion: v1
kind: Service
metadata:
  name: svc2
spec:
  type: ClusterIP
  selector:
    app: nginx2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nsx-l7-lb
spec:
  tls:
  - hosts:
    - lab-wm-1.c1cx.com
    - lab-wm-2.c1cx.com
    secretName: tls-secret  # TLS secret for HTTPS
  rules:
  - host: lab-wm-1.c1cx.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: svc1
            port:
              number: 80
  - host: lab-wm-2.c1cx.com
    http:
      paths:          
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: svc2
            port:
              number: 80
