nginx/ingressRule-L7.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nsx-l7-lb
spec:
  rules:
  - host: nginx.c1cx.com
    http:
      paths:
      - path: "/path1"
        pathType: Prefix
        backend:
          service:
            name: svc1
            port:
              number: 80
          
      - path: "/path2"
        pathType: Prefix
        backend:
          service:
            name: svc2
            port:
              number: 80
